Track 1 files into repository.
- modified styles/website.css

Auto commit by GitBook Editor

--- a/styles/website.css
+++ b/styles/website.css
@@ -64,5 +64,5 @@ input[type=checkbox]{
     height: 2em;
     line-height: 2em;
     border-radius: 4px;
-    background: #efefef;.table-a td{font-size:12px;}
+    background: #efefef;.table-a table{font-size:12px;}
 }
